Update project name and tags

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "DeveloperFolio",
-  "name": "DeveloperFolio",
+  "short_name": "Sindre's Portfolio",
+  "name": "Sindre's Portfolio",
   "icons": [
     {
       "src": "/favicon.ico",
