Switch to custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sindrehenriksen.github.io/developer-portfolio",
+  "homepage": "https://sindrehenriksen.dev",
   "name": "developer-portfolio",
   "version": "0.1.0",
   "private": true,
